# baorecon

./: .gitignore  README  README.edison.20141109  README.hopper
src/: CMakeLists.txt.edison  CMakeLists.txt.generic  CMakeLists.txt.hopper  Delta.cpp  DensityGrid.cpp  Misc.cpp  Params.cpp  Particle.cpp  PotentialSolve.cpp  Recon.h  sftp-config.json
src/progs/: Az_template.xml  CMakeLists.txt  recon_PBC_real.cpp  recon_lasdamas.cpp  recon_lasdamas_np.cpp  recon_lasdamas_real.cpp  recon_lasdamas_real_weighted.cpp  recon_lasdamas_zspace.cpp  recon_lasdamas_zspace_weighted.cpp  recon_lasdamas_zspace_weighted_norsd.cpp  recon_shell_radial.cpp  recon_shell_real.cpp  recon_shell_zpp.cpp
src/tests/: CMakeLists.txt  testCIC.cpp  testCIC2.cpp  testCIC3.cpp  testFake.cpp  testHoffmanRibak.cpp  testMask.cpp  testParams.cpp  testPk.cpp  testRandomParticle.cpp  testReadParticle.cpp  testReadWriteAscii.cpp  testSlabDecompose.cpp  testXi.cpp  testXi_shell.cpp  testXi_shell_smooth.cpp  testderiv.cpp  testghost.cpp  testpot.cpp  testpot2.cpp  testpot_radial_timing.cpp
src/ticpp/: CMakeLists.txt  example.cpp  example.xml  ticpprc.h  tinyxml.h
